<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="version">1.00</string>
    <string name="data_format"><xliff:g id="format">MM-dd E</xliff:g></string>
    <string name="app_name">HERTV Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="helptip">Press Assistant button on the remote control to open the Companion</string>
    <string name="adtxt">main > hit</string>
    <string name="load_tip">loading&#8230;</string>
    <string name="allapp">My Application</string>
    <string name="back">back</string>
    <string name="ad_txt_default">HERAN product development for three consecutive years won the Taiwan Golden Quality Award. Second wave of energy saving LCD may grant subsidies associated HERAN models released</string>
    <string name="more_app">All App</string>
    <string name="temperature">℃</string>
    <string name="default_temperature">N/A</string>
    <string name="source_name">Source:</string>
    <string name="signal_name">Signal status:</string>
    <string name="nosignaltips">\u0020 No Signal</string>
    <string name="tuningtip">Press enter to tuning</string>
    <string name="default_show_city">Taibei</string>
    <string name="passwordtip">The program is locked</string>
    <string name="date_format">MM-dd E</string>
    <string name="theme_no_theme">There is no available theme</string>
    <string name="theme_no_network">Connect timeout,please check network !</string>
    <string name="shop_no_network">Please check network !</string>
    <string name="server_error">server error</string>
    <string name="order_remind">Order Reminder</string>
    <string name="will_start"> will start.</string>
    <string name="start_auto"> seconds will switch to it.</string>
    <string name="switch_immediately">Sure</string>
    <string name="order_record_remind">Order Recorder Reminder</string>
    <string name="user_bonus">Bonus:</string>
    <string name="user_coin">Coin:</string>
    <string name="mono">MONO</string>
    <string name="sap">SAP</string>
    <string name="stereo">Stereo</string>
    <string name="dtv">Digital TV</string>
    <string name="atv">analog TV</string>
    <string name="noprogram_tip">No program now.You need to search.</string>
    <string name="locked">The current channel has been locked</string>
    <string name="app_run_error">Application run error!</string>
    <string name="mulit_download_tips">Please wait for the previous th ScreenProtection.getInstance().start(mContext, msignalTip);eme finish downloading!</string>
    <string name="wait_for_launcher">Please wait for loading data！</string>
    <string name="apk_download_tips">Please wait for the previous apk finish downloading!</string>
    <string name="shopping_gold">,Shopping gold$</string>
    <string name="bonus_gold">,Bonus gold$</string>
    <string name="alert_confirm">Confirm</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_info">There is a new version.update now?</string>
    <string name="alert_title">Net Update</string>
    <string name="download_illegal_url">The application is not installed, invalid link, please check the Internet settings, if the server is busy in networking may be normal！</string>
     <string name="network_not_good"> Network state is not good </string>
    <string name="network_detection"> Network detection :</string>
    <string name="advertising_surplus">AD left: %ds</string>
    <string name="skip_advertising">You can skip Ad \n after %s s</string>
    <string name="update_failed">Update failed</string>
    <string name="update_file">Update file download, please&#8230;</string>
    <string name="ko_apk">start ko</string>
    <string name="not_install_ko_apk">not install ko apk</string>
     <string name="start_pandora">start pandora</string>
    <string name="enter_pandora_dialog_title">Pandora Studios</string>
    <string name="enter_pandora_dialog_content">This area is Pandora Studios, part of the video content and controversial subject matter topic, inappropriate or enjoy watching a particular ethnic group. \nIf this service, causing you distress, please press [Close Services Forever] button to close the function, thank you.</string>
    <string name="enter_pandora_dialog_yes">[Agree and enter]</string>
    <string name="enter_pandora_dialog_no">[Disagree and leave]</string>
    <string name="check_password_dialog_title">Please enter paternity password(0~9)</string>
    <string name="check_password_dialog_content">Based on the protection of minors viewing security</string>
    <string name="check_password_dialog_yes">[Enter]</string>
    <string name="check_password_dialog_no">[Leave]</string>
    <string name="wrong_password_dialog_title">Paternity Password</string>
    <string name="wrong_password_dialog_content">Wrong password, please re-enter.</string>
    <string name="wrong_password_dialog_yes">Re-enter</string>
    <string name="enter_pandora_dialog_defaultedit_text">[Edit Password]</string>
    <string name="enter_pandora_dialog_default_text">Please enter password&#8230;</string>
    <string name="enter_pandora_dialog_current_text">Please enter current password&#8230;</string>
    <string name="enter_pandora_dialog_new_text">Please enter new password&#8230;</string>
    <string name="enter_pandora_dialog_passwd_text">[Please enter Paternity Password]</string>
    <string name="enter_pandora_dialog_editpwd_title">Please enter password</string>
    <string name="enter_pandora_dialog_editpwd_emptytitle">Password is empty</string>
    <string name="enter_pandora_dialog_editpwd_emptytext">Keep in mind to avoid the burden of customer service!</string>
    <string name="enter_pandora_dialog_editpwd_editnewtitle">Edit Password</string>
    <string name="enter_pandora_dialog_editpwd_editnewtext">Please enter 『new password』!</string>
    <string name="enter_pandora_dialog_superpwd_title">Super Password</string>
    <string name="enter_pandora_dialog_reset_title">Explanation</string>
    <string name="enter_pandora_dialog_reset_text">After resetting the system need to change your password, enter 『New Password』!</string>
    <string name="skip_pandora_dialog_text">[Close Services Forever]</string>
    <string name="skip_pandora_dialog_defaultedit_title">Close Services</string>
    <string name="skip_pandora_dialog_defaultedit_text">If after executing [Close Services Forever] action, this feature will disappear in the television system, thank you.</string>
    <string name="enter_allapp_dialog_yes">[Agree]</string>
    <string name="enter_allapp_dialog_no">[Agree - no reminders]</string>
    <string name="enter_allapp_dialog_title">Jowin Terms of Service</string>
    <string name="enter_allapp_dialog_content">		Mounted on a multimedia application platform within the unit, set by the cloud-based platform drilling win Ltd ICP system of this device application architecture build it. Limited drilling by winning cloud responsible for the operation. Thank you for using Jowin drill win, the Department provides services under the terms of the Service (hereinafter referred to as "Jowin").	
		\n\n</string>
    <string name="enter_allapp_checkdialog_content">Have you read "Jowin drill win Terms of Service" ?</string>
    <string name="scifly_video">91Q</string>
    <string name="scifly_video_dialog_title"> Statement of Use:</string>
    <string name="scifly_video_dialog_message">Attention! You will be installed using third party video application platform, the application only as the device system compatible display, equipped with video and audio content are not belongs to the device manufacturer, device itself does not guarantee the stability of the content and the legitimacy of the. Other if unit official and folk notary organs or related interest to the company put forward written to inform its legitimacy, the company has the right to turn off this feature will be directly。</string>
    <string name="scifly_video_dialog_positive_button">Confirm to continue using</string>
    <string name="scifly_video_dialog_negative_button">leave</string>
    <string name="scifly_video_notice">File does not exist!</string>
    <string name="install_title">install</string>
    <string name="install_info">Please wait for apk to install!</string>
    <string name="download_tips">Use declaration:</string>
    <string name="download_msg">Attention! You will be installed using third-party applications, the application only as the device system compatible display, equipped with video and audio content are not belongs to the device manufacturer and device itself does not guarantee the content stability and source of legitimacy. If there is an official unit
                               And folk notary organs or relevant stakeholders to the company put forward written to inform its legitimate, the company has the right response to this function will be closed。 </string>
    <string name="download_ok">OK</string>
    <string name="download_cancel">Cancel</string>
    <string name="download_start_downloading">Start downloading!</string>
    <string name="apk_downloading">Downloading!</string>
    <string name="download_success">Download success</string>
    <string name="download_progress">Download progress</string>
    <string name="page">page</string>
    <string name="prompt">prompt</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="Qvideo">91Qvideo</string>
    <string name="news">news</string>
    <string name="read_data1">data read .</string>
    <string name="read_data2">data read . .</string>
    <string name="read_data3">data read . . .</string>
    <string name="read_data4">data read&#8230;</string>
    <string name="analysing">Analysising....</string>
    <string name="no_analysing">No Analysising&#8230;</string>
    <string name="loading_video">Loading video&#8230;</string>
    <string name="dont_choose">Don\'t make any choices-EE</string>
    <string name="error">abnormal-EE.</string>
    <string name="ignore">Skip advertising -EE</string>
    <string name="updata">Update Notification</string>
    <string name="message">There is a new version of the update, whether to download?</string>
    <string name="message1">Update file download, please wait&#8230;</string>
    <string name="sure">sure</string>
    <string name="cancle">cancle</string>
    <string name="loading_updata">Download and update &#8230;</string>
    <string name="time">时间</string>
    <string name="weather_temperature">溫度</string>
    <string name="weather_condition">氣象狀態</string>
    <string name="wind">風向</string>
    <string name="rainfall">降雨機率</string>
    <string name="code"> / </string>
    <string name="choicepage"> 1 </string>
    <string name="imgbtn_des">This is a H638 ImageBtton</string>
    <string name="imgview_des">This is a H638 ImageView</string>
 	<string name="keelung_city">基隆市</string>
    <string name="taipei_city">臺北市</string>
    <string name="hsinchu_city">新竹市</string>
    <string name="hsinchu_county">新竹縣</string>
    <string name="taichung_city">臺中市</string>
    <string name="tainan_city">臺南市</string>
    <string name="kaohsiung_city">高雄市</string>
    <string name="newtaipei_city">新北市</string>
    <string name="yilan_county">宜蘭縣</string>
    <string name="taoyuan_city">桃園市</string>
    <string name="miaoli_county">苗栗縣</string>
    <string name="changhua_county">彰化縣</string>
    <string name="nantou_county">南投縣</string>
    <string name="yunlin_county">雲林縣</string>
    <string name="chiayi_city">嘉義市</string>
    <string name="chiayi_county">嘉義縣</string>
    <string name="pingtung_county">屏東縣</string>
    <string name="taitung_county">臺東縣</string>
    <string name="hualien_county">花蓮縣</string>
    <string name="penghu_county">澎湖縣</string>
    <string name="kinmen_county">金門縣</string>
    <string name="lienchiang_county">連江縣</string>
</resources>